# micrograd.rs

./: Cargo.toml  README.md
examples/: complex_viz.rs  mlp_demo.rs  simple.rs
src/: engine.rs  lib.rs  nn.rs
tests/: karpathy_micrograd.rs
