[package]
name = "micrograd"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = "0.4.35"
base64 = "0.22.0"
itertools = "0.12"
tokio = "1.0"
burn = { version = "0.13.2", features = ["wgpu"] }

[dev-dependencies]
insta = { version = "1.35.1", features = ["yaml"] }
rstest = "0.18.2"
assertor = "0.0.2"
float_eq = "1.0.1"
